<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_back"
        android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:title="@string/back" />

    <item
        android:id="@+id/navigation_forward"
        android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:title="@string/forward" />
    <item
        android:id="@+id/navigation_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/menu" />
</menu>
